--- a/src/sass/_form.scss
+++ b/src/sass/_form.scss
@@ -83,6 +83,7 @@ label {
   border: none;
   border-radius: 5px 0 0 5px;
   padding: 8px;
+  margin-left: 170px;
   font-size: 14px;
   outline: none;
 }
